cleanup and make tests runable

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@ test=pytest
 license_file = LICENSE.txt
 
 [tool:pytest]
-addopts = -v --timeout=300 --cov=can --cov-config=setup.cfg
+addopts = -v
 
 [coverage:run]
 # we could also use branch coverage
