--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,5 @@
+[bdist_wheel]
+universal = 1
 [aliases]
 test=pytest
 
@@ -5,13 +7,16 @@ test=pytest
 license_file = LICENSE.txt
 
 [tool:pytest]
-addopts = -v
+addopts = -v --timeout=300 --cov=can --cov-config=setup.cfg
 
 [coverage:run]
 # we could also use branch coverage
 branch = False
 # already specified by call to pytest using --cov=can
 #source = can
+omit =
+    # legacy code
+    can/CAN.py
 
 [coverage:report]
 # two digits after decimal point
